# Ai-for-bharat-2026

./: .doc-healing.example.yml  .env.example  .gitignore  .ruff.toml  Dockerfile  Dockerfile.python  Makefile  README.md  alembic.ini  api_task_def.json  bedrock_policy.json  check_health.sh  check_secrets.py  coverage.xml  crashed_worker.json  debug_properties.py  docker-compose.lightweight.yml  docker-compose.yml  ecs-execution-cw-policy.json  ecs-task-policy.json  health.json  latest_task_def.json  pyproject.toml  pytest.ini  pytest_migration.txt  pytest_suite_results.txt  pytest_unix.txt  recreate_service.sh  run_unix.json  running_workers.json  service_status.json  service_status_all.json  service_status_linux.json  service_status_linux2.json  service_status_linux5.json  service_status_linux6.json  service_status_linux7.json  sg.json  sg_linux.json  stopped_workers.json  (+10 more)
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: .gitkeep
deploy/aws/: DEPLOYMENT_GUIDE.md  api-task-definition.json  bedrock_policy.json  setup_infrastructure.sh  worker-task-definition.json
k8s/: api-deployment.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml  worker-deployment.yaml
scripts/: init_db.py  migrate_postgres_to_sqlite.py  migrate_sqlite_to_postgres.py  run_rq_worker.py  run_unified_worker.py  run_worker.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_api_endpoints_properties.py  test_api_startup.py  test_config.py  test_connection.py  test_deployment_configs.py  test_memory_backend.py  test_memory_backend_integration.py  test_memory_monitoring_properties.py  test_migration_scripts.py  test_models.py  test_queue_factory.py  test_redis_backend.py  test_static_analyzer.py  test_task_processing_properties.py  test_unified_worker.py  test_worker_tasks.py
(+48 files in other folders)
