[tool.poetry]
name = "ai-doc-healing"
version = "0.1.0"
description = "Self-Healing Documentation Engine - A GitHub/GitLab bot that validates and auto-corrects code snippets in documentation"
authors = ["AI Doc Healing Team"]
readme = "README.md"
packages = [{include = "doc_healing", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
rq = "^1.16.0"
rq-scheduler = "^0.13.1"
pygithub = "^2.1.1"
python-gitlab = "^4.4.0"
pyyaml = "^6.0.1"
markdown-it-py = "^3.0.0"
openai = "^1.10.0"
tree-sitter = "^0.21.0"
httpx = "^0.26.0"
slowapi = "^0.1.9"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
boto3 = "^1.34.0"
psutil = "^5.9.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
hypothesis = "^6.98.0"
ruff = "^0.1.14"
black = "^24.1.1"
mypy = "^1.8.0"
types-pyyaml = "^6.0.12"
types-redis = "^4.6.0"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=src/doc_healing --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
